--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sb-mdit",
   "type": "module",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -22,6 +22,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@css-inline/css-inline": "^0.17.0",
     "canvas": "^3.1.2",
     "jsdom": "^26.1.0",
     "scratchblocks": "^3.6.4"
